// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SignUpPage /> should NOT render SignUpPage when user IS authenticated 1`] = `null`;

exports[`<SignUpPage /> should render SignUpPage when user IS NOT authenticated 1`] = `
<div>
  <div>
    <form
      noValidate={true}
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="firstName"
        >
          Name
        </label>
        <div
          className=""
        >
          <input
            id="firstName"
            name="first_name"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="Name"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label
          htmlFor="email"
        >
          E-mail
        </label>
        <div
          className=""
        >
          <input
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="E-mail"
            type="email"
            value=""
          />
        </div>
      </div>
      <div>
        <label
          htmlFor="password"
        >
          Password
        </label>
        <div
          className=""
        >
          <input
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="Password"
            type="password"
            value=""
          />
        </div>
      </div>
      <div>
        <label
          htmlFor="confirmPassword"
        >
          Repeat password
        </label>
        <div
          className=""
        >
          <input
            id="confirmPassword"
            name="confirm_password"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="Repeat password"
            type="password"
            value=""
          />
        </div>
      </div>
      <div>
        <button
          disabled={true}
          type="submit"
        >
          Sign Up
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<SignUpPage /> should render SignUpPage with error message when errorMessage is in the props 1`] = `
<div>
  <div>
    <div>
      Ooops, something went wrong, please try again later.
    </div>
    <form
      noValidate={true}
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="firstName"
        >
          Name
        </label>
        <div
          className=""
        >
          <input
            id="firstName"
            name="first_name"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="Name"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label
          htmlFor="email"
        >
          E-mail
        </label>
        <div
          className=""
        >
          <input
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="E-mail"
            type="email"
            value=""
          />
        </div>
      </div>
      <div>
        <label
          htmlFor="password"
        >
          Password
        </label>
        <div
          className=""
        >
          <input
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="Password"
            type="password"
            value=""
          />
        </div>
      </div>
      <div>
        <label
          htmlFor="confirmPassword"
        >
          Repeat password
        </label>
        <div
          className=""
        >
          <input
            id="confirmPassword"
            name="confirm_password"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="Repeat password"
            type="password"
            value=""
          />
        </div>
      </div>
      <div>
        <button
          disabled={true}
          type="submit"
        >
          Sign Up
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<SignUpPage /> should render SignUpPage with loading indicator when loading is in the props 1`] = `
<div>
  <div>
    <div>
      Processing... Please wait.
    </div>
    <form
      noValidate={true}
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="firstName"
        >
          Name
        </label>
        <div
          className=""
        >
          <input
            id="firstName"
            name="first_name"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="Name"
            type="text"
            value=""
          />
        </div>
      </div>
      <div>
        <label
          htmlFor="email"
        >
          E-mail
        </label>
        <div
          className=""
        >
          <input
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="E-mail"
            type="email"
            value=""
          />
        </div>
      </div>
      <div>
        <label
          htmlFor="password"
        >
          Password
        </label>
        <div
          className=""
        >
          <input
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="Password"
            type="password"
            value=""
          />
        </div>
      </div>
      <div>
        <label
          htmlFor="confirmPassword"
        >
          Repeat password
        </label>
        <div
          className=""
        >
          <input
            id="confirmPassword"
            name="confirm_password"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="Repeat password"
            type="password"
            value=""
          />
        </div>
      </div>
      <div>
        <button
          disabled={true}
          type="submit"
        >
          Sign Up
        </button>
      </div>
    </form>
  </div>
</div>
`;
